new sections added

--- a/index.html
+++ b/index.html
@@ -179,8 +179,57 @@
                     </div>
                 </div>
             </div>
+
         </section>
         <!-- Services END -->
+        <section class="serv-desc">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="des-card">
+                            <div class="icon">
+                                <i class="bi bi-person"></i>
+                            </div>
+                            <h4>Dummy Text Heading</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                isse u</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="des-card">
+                            <div class="icon">
+                                <i class="bi bi-person"></i>
+                            </div>
+                            <h4>Dummy Text Heading</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                isse u</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="des-card">
+                            <div class="icon">
+                                <i class="bi bi-person"></i>
+                            </div>
+                            <h4>Dummy Text Heading</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                isse u</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="impvideo">
+            <img src="./assets/images/infobg.jpg" alt="">
+            <div class="imgvideo-contents">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6"></div>
+                        <div class="col-md-6"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
 
