Some Sections Added

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                             <h4>Dummy Text Heading</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 isse u</p>
+
                         </div>
                     </div>
                 </div>
@@ -220,16 +221,212 @@
         </section>
 
         <section class="impvideo">
-            <img src="./assets/images/infobg.jpg" alt="">
+
             <div class="imgvideo-contents">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-6"></div>
-                        <div class="col-md-6"></div>
+                    <div class="row align-items-center ">
+                        <div class="col-md-6">
+                            <img src="./assets/images/logosec.png" alt="">
+                            <div class="video">
+                                <img src="./assets/images/vidthumb.jpg" alt="">
+                                <div class="play"><a href="#"><i class="bi bi-play-fill"></i></a></div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="vidtxts">
+                                <h4>Dummy Text Heading</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea </p>
+                                <a href="#" class="btn btn-sec">Learn more</a>
+                            </div>
+                            <div class="vidtxts">
+                                <h4>Dummy Text Heading</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea </p>
+                                <a href="#" class="btn btn-sec">Learn more</a>
+                            </div>
+                            <div class="vidtxts">
+                                <h4>Dummy Text Heading</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea </p>
+                                <a href="#" class="btn btn-sec">Learn more</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="wedeliver">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <div class="sec-title">
+                            <h2>We Deliver Results</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 mt-3">
+                        <div class="count-o">
+                            <span class="num">500+</span>
+                            <span class="name">Satisfied Clients</span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mt-3">
+                        <div class="count-o">
+                            <span class="num">350+</span>
+                            <span class="name">Security Guards</span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mt-3">
+                        <div class="count-o">
+                            <span class="num">25+</span>
+                            <span class="name">Years of Experience</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center hr">
+                    <div class="col-md-8 mt-5 text-center ">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                            viverra maecenas accumsan lacus vel </p>
+
+                        <a href="#" class="btn btn-sec">Contact Us Today</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="whatmakes">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <div class="sec-title">
+                            <h2>What Makes Us Diffrent</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                                viverra maecenas accumsan lacus vel facilisis. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row imgcards">
+                    <div class="col-md-3">
+                        <div class="imgcard">
+                            <img src="./assets/images/imgcard1.jpg" alt="">
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="imgcard">
+                            <img src="./assets/images/imgcard2.jpg" alt="">
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="imgcard">
+                            <img src="./assets/images/imgcard3.jpg" alt="">
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="imgcard">
+                            <img src="./assets/images/imgcard4.jpg" alt="">
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-sec">
+            <div class="container">
+                <span>Dedicated & Experienced Security Guard Services</span>
+                <h2>Contact Us For A <br />
+                    Free Consultation Today</h2>
+                <a href="#" class="btn btn-theme">Request a Quote</a>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="./assets/images/secure-watch-logo.png" alt="" class="footer-logo">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="f-links">
+                                    <h3>QUICK LINKS </h3>
+                                    <ul class="i">
+                                        <li><a href="#">Firm Profile</a></li>
+                                        <li><a href="#"> Services</a></li>
+                                        <li><a href="#">Divisions</a></li>
+                                        <li><a href="#">Career</a></li>
+                                        <li><a href="#">Book an Appointment</a></li>
+                                        <li><a href="#">Testimonials</a></li>
+                                        <li><a href="#">Contact Us</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="f-links">
+                            <h3>SERVICES</h3>
+                            <ul>
+                                <li><a href="#">Corporate Security</a></li>
+                                <li><a href="#">Commerical Security</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="f-links">
+                            <h3>Divisions </h3>
+                            <ul>
+                                <li><a href="#">Car Dealerships</a></li>
+                                <li><a href="#">Warehouse and Distribution </a></li>
+                                <li><a href="#">Commercial High Rise</a></li>
+                                <li><a href="#">Construction </a></li>
+                                <li><a href="#">Manufacturing Facilities</a></li>
+                                <li><a href="#">Health Care Facilities </a></li>
+
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="f-links">
+                            <h3>CONTACT US</h3>
+                            <ul>
+                                <li><a href="#">Sample Address,</a></li>
+                                <li><a href="#">Sample Address, Sample</a></li>
+                                <li><a href="#" class="btn btn-theme">get directions</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
     </div>
 
 
