added sections and added animation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <!-- Fonts -->
     <link rel="stylesheet" href="./assets/css/fonts.css">
+    <!-- AOS CDN -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Owl carousel CSS CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -80,7 +82,7 @@
         <!-- Banner -->
         <section class="banner">
             <img src="./assets/images/bannerbg.jpg" alt="" class="bannerimg">
-            <div class="banner-content">
+            <div class="banner-content" data-aos="zoom-in-down" data-aos-duration="1500">
                 <div class="container">
                     <div class="text-content">
                         <h1>Security Guard Services</h1>
@@ -98,7 +100,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <div class="sec-title">
+                        <div class="sec-title" data-aos="zoom-in-down" data-aos-duration="1500">
                             <h2>Professional & Reliable Services</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
@@ -107,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel">
+            <div class="carousel" data-aos="zoom-in-down" data-aos-duration="1500">
                 <div class="container-fluid">
                     <div class="owl-carousel services-carousel">
                         <div class="item">
@@ -184,7 +186,7 @@
         <!-- Services END -->
         <section class="serv-desc">
             <div class="container">
-                <div class="row">
+                <div class="row" data-aos="zoom-in-down" data-aos-duration="1500">
                     <div class="col-md-4">
                         <div class="des-card">
                             <div class="icon">
@@ -225,14 +227,14 @@
             <div class="imgvideo-contents">
                 <div class="container">
                     <div class="row align-items-center ">
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="zoom-in-down" data-aos-duration="1500">
                             <img src="./assets/images/logosec.png" alt="">
                             <div class="video">
                                 <img src="./assets/images/vidthumb.jpg" alt="">
                                 <div class="play"><a href="#"><i class="bi bi-play-fill"></i></a></div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="zoom-in-down" data-aos-duration="2000">
                             <div class="vidtxts">
                                 <h4>Dummy Text Heading</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -263,7 +265,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <div class="sec-title">
+                        <div class="sec-title" data-aos="zoom-in-down" data-aos-duration="1500">
                             <h2>We Deliver Results</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore</p>
@@ -272,25 +274,25 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 mt-3">
-                        <div class="count-o">
+                        <div class="count-o" data-aos="zoom-in-down" data-aos-duration="1500">
                             <span class="num">500+</span>
                             <span class="name">Satisfied Clients</span>
                         </div>
                     </div>
-                    <div class="col-md-4 mt-3">
+                    <div class="col-md-4 mt-3" data-aos="zoom-in-down" data-aos-duration="1800">
                         <div class="count-o">
                             <span class="num">350+</span>
                             <span class="name">Security Guards</span>
                         </div>
                     </div>
-                    <div class="col-md-4 mt-3">
+                    <div class="col-md-4 mt-3" data-aos="zoom-in-down" data-aos-duration="2100">
                         <div class="count-o">
                             <span class="num">25+</span>
                             <span class="name">Years of Experience</span>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center hr">
+                <div class="row justify-content-center hr" data-aos="zoom-in-down" data-aos-duration="1500">
                     <div class="col-md-8 mt-5 text-center ">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
@@ -305,7 +307,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <div class="sec-title">
+                        <div class="sec-title" data-aos="zoom-in-down" data-aos-duration="1500">
                             <h2>What Makes Us Diffrent</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
@@ -313,7 +315,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row imgcards">
+                <div class="row imgcards" data-aos="zoom-in-down" data-aos-duration="1800">
                     <div class="col-md-3">
                         <div class="imgcard">
                             <img src="./assets/images/imgcard1.jpg" alt="">
@@ -358,7 +360,7 @@
             </div>
         </section>
         <section class="contact-sec">
-            <div class="container">
+            <div class="container" data-aos="zoom-in-down" data-aos-duration="1500">
                 <span>Dedicated & Experienced Security Guard Services</span>
                 <h2>Contact Us For A <br />
                     Free Consultation Today</h2>
@@ -369,7 +371,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="zoom-in-down" data-aos-duration="1500">
                         <div class="row">
                             <div class="col-md-6">
                                 <img src="./assets/images/secure-watch-logo.png" alt="" class="footer-logo">
@@ -390,8 +392,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="f-links">
+                    <div class="col-md-2" >
+                        <div class="f-links" data-aos="zoom-in-down" data-aos-duration="1800">
                             <h3>SERVICES</h3>
                             <ul>
                                 <li><a href="#">Corporate Security</a></li>
@@ -400,8 +402,8 @@
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <div class="f-links">
-                            <h3>Divisions </h3>
+                        <div class="f-links" data-aos="zoom-in-down" data-aos-duration="2100">
+                            <h3>DIVISIONS</h3>
                             <ul>
                                 <li><a href="#">Car Dealerships</a></li>
                                 <li><a href="#">Warehouse and Distribution </a></li>
@@ -414,13 +416,25 @@
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <div class="f-links">
+                        <div class="f-links" data-aos="zoom-in-down" data-aos-duration="2300">
                             <h3>CONTACT US</h3>
                             <ul>
                                 <li><a href="#">Sample Address,</a></li>
                                 <li><a href="#">Sample Address, Sample</a></li>
                                 <li><a href="#" class="btn btn-theme">get directions</a></li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p>Copyright © 2023 SecureWatch Solutions Inc. All Right Reserved.</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p>Powered by G Web Pro® - Digital Marketing & SEO Services in Toronto</p>
                         </div>
                     </div>
                 </div>
@@ -440,7 +454,8 @@
         crossorigin="anonymous"></script>
     <!-- Stellarnav js  -->
     <script src="./assets/js/stellarnav.js"></script>
-
+    <!-- AOS JS CDN -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Owl carousel JS CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
