some responsive fiexed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Source Watch</title>
 </head>
 
@@ -32,12 +34,10 @@
         <header class="header-main">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-2">
+                    <div class="col-md-12 d-flex justify-content-between align-items-center">
                         <div class="header-logo">
                             <img src="./assets/images/secure-watch-logo.png" alt="">
                         </div>
-                    </div>
-                    <div class="col-md-10">
                         <nav class="navlinks">
                             <div class="stellarnav">
                                 <ul>
@@ -82,9 +82,9 @@
         <!-- Banner -->
         <section class="banner">
             <img src="./assets/images/bannerbg.jpg" alt="" class="bannerimg">
-            <div class="banner-content" data-aos="zoom-in-down" data-aos-duration="1500">
+            <div class="banner-content">
                 <div class="container">
-                    <div class="text-content">
+                    <div class="text-content" data-aos="zoom-in-down" data-aos-duration="1500">
                         <h1>Security Guard Services</h1>
                         <div class="btns">
                             <a href="#" class="btn btn-theme">Request a Quote</a>
@@ -92,6 +92,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="icon">
+                <img src="./assets/images/mouse.png" alt="">
             </div>
         </section>
         <!-- Banner END -->
@@ -223,12 +226,11 @@
         </section>
 
         <section class="impvideo">
-
             <div class="imgvideo-contents">
                 <div class="container">
                     <div class="row align-items-center ">
-                        <div class="col-md-6" data-aos="zoom-in-down" data-aos-duration="1500">
-                            <img src="./assets/images/logosec.png" alt="">
+                        <div class="col-md-6 text-center" data-aos="zoom-in-down" data-aos-duration="1500">
+                            <img src="./assets/images/logosec.png" alt="" class="vidlogo">
                             <div class="video">
                                 <img src="./assets/images/vidthumb.jpg" alt="">
                                 <div class="play"><a href="#"><i class="bi bi-play-fill"></i></a></div>
@@ -316,7 +318,7 @@
                     </div>
                 </div>
                 <div class="row imgcards" data-aos="zoom-in-down" data-aos-duration="1800">
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-3 mb-3">
                         <div class="imgcard">
                             <img src="./assets/images/imgcard1.jpg" alt="">
                             <div class="text">
@@ -326,7 +328,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-3 mb-3">
                         <div class="imgcard">
                             <img src="./assets/images/imgcard2.jpg" alt="">
                             <div class="text">
@@ -336,7 +338,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-3 mb-3">
                         <div class="imgcard">
                             <img src="./assets/images/imgcard3.jpg" alt="">
                             <div class="text">
@@ -346,7 +348,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-3 mb-3">
                         <div class="imgcard">
                             <img src="./assets/images/imgcard4.jpg" alt="">
                             <div class="text">
@@ -392,7 +394,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2" >
+                    <div class="col-md-2">
                         <div class="f-links" data-aos="zoom-in-down" data-aos-duration="1800">
                             <h3>SERVICES</h3>
                             <ul>
